# cpp-terminfo

./: .LICENSE  .codespellignore  .codespellrc  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macOS.yml  windows.yml
apps/: CMakeLists.txt  parser.cpp
cmake/: cpp-terminfoConfig.cmake.in
examples/: CMakeLists.txt  terminal.cpp
include/cpp-terminfo/: Bool.hpp  Boolean.hpp  BooleanId.hpp  Capabilities.hpp  Capability.hpp  Data.hpp  Get.hpp  Integer.hpp  IntegerId.hpp  Parser.hpp  Print.hpp  String.hpp  StringId.hpp  Terminfo.hpp  Terminfos.hpp  Type.hpp
src/: CMakeLists.txt  Capabilities.cpp  Parser.cpp  Print.cpp  Terminfo.cpp
